--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap" rel="stylesheet">
+
+  <script defer src="./js/cart.js"></script>
 </head>
 <body>
 
@@ -14,15 +16,15 @@
   <section class="window">
     <div class="container">
 
-    <div class="window__crm">
+    <div class="window__crm window__none">
 
       <div class="window__footer window__exit">
         <p class="window__text-footer">
-          Итоговая стоимость: <span>$ 900.00</span>
+          Итоговая стоимость: <span class="crm__total-price">$ 900.00</span>
         </p>
       </div>
 
-      <form action="https://jsonplaceholder.typicode.com/posts" method="post">
+      <form class="form" action="https://jsonplaceholder.typicode.com/posts" method="post">
         <h1 class="crm__start-world">
           CRM
         </h1>
