--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <section class="window">
     <div class="container">
 
-    <div class="window__crm window__none">
+    <div class="window__crm">
 
       <div class="window__footer window__exit">
         <p class="window__text-footer">
@@ -204,6 +204,7 @@
     </p>
   </div>
 
+  <p class="window__id">1253</p>
   <button class="window__exit" type="button"><img src="img/X.svg" alt="X"></button>
 
   <form action="https://jsonplaceholder.typicode.com/posts" method="post">
