--- a/index.html
+++ b/index.html
@@ -36,127 +36,14 @@
               <input class="crm__filter" type="button" name="filter" value="Фильтр">
 
               <div class="crm__container-1">
-                <span class="crm__icon"><img src="img/search.svg"></span>
+                <span class="crm__icon">
+                  <img src="img/search.svg"></span>
                 <input type="crm__search" id="search" placeholder="Поиск по наименованию и категории" />
               </div>
             </div>
 
-            <input class="window__add" type="submit" name="add" value="Добавить товар">
+            <button class="window__add window__add-btn" type="button">Добавить товар</button>
           </div>
-
-          <!--
-          <ul class="crm__header-2">
-            <li class="crm__header-2_1">
-              ID
-            </li>
-            <li class="crm__header-2_2">
-              Наименование
-            </li>
-            <li class="crm__header-2_3">
-              Категория
-            </li>
-            <li class="crm__header-2_4">
-              ед/изм
-            </li>
-            <li class="crm__header-2_5">
-              количество
-            </li>
-            <li class="crm__header-2_6">
-              цена
-            </li>
-            <li class="crm__header-2_7">
-              ИТОГ
-            </li>
-          </ul>
-
-          <div class="crm__main-1">
-            <ul class="crm__main_1-blox">
-              <li class="crm__main-1_1">
-                246016548
-              </li>
-              <li class="crm__main-1_2">
-                Навигационная система Soundmax
-              </li>
-              <li class="crm__main-1_3">
-                Техника для дома
-              </li>
-              <li class="crm__main-1_4">
-                шт
-              </li>
-              <li class="crm__main-1_5">
-                5
-              </li>
-              <li class="crm__main-1_6">
-                $100
-              </li>
-              <li class="crm__main-1_7">
-                $500
-              </li>
-            </ul>
-
-            <ul class="crm__main_1-img">
-              <li class="crm__main-1_1-img">
-                <button class="crm__main-img">
-                  <img src="img/carbon_no-image.svg" alt="no">
-                </button>
-              </li>
-              <li class="crm__main-1_2-img">
-                <button class="crm__main-img">
-                  <img src="img/akar-icons_edit.svg" alt="no">
-                </button>
-              </li>
-              <li class="crm__main-1_3-img">
-                <button class="crm__main-img">
-                  <img src="img/ant-design_delete-outlined.svg" alt="no">
-                </button>
-              </li>
-            </ul>
-          </div>
-
-          <div class="crm__main-1">
-            <ul class="crm__main_1-blox">
-              <li class="crm__main-1_1">
-                246016548
-              </li>
-              <li class="crm__main-1_2">
-                Навигационная система Soundmax
-              </li>
-              <li class="crm__main-1_3">
-                Техника для дома
-              </li>
-              <li class="crm__main-1_4">
-                шт
-              </li>
-              <li class="crm__main-1_5">
-                5
-              </li>
-              <li class="crm__main-1_6">
-                $100
-              </li>
-              <li class="crm__main-1_7">
-                $500
-              </li>
-            </ul>
-
-            <ul class="crm__main_1-img">
-              <li class="crm__main-1_1-img">
-                <button class="crm__main-img">
-                  <img src="img/ant-design_delete-outlined.svg" alt="no">
-                </button>
-              </li>
-              <li class="crm__main-1_2-img">
-                <button class="crm__main-img">
-                  <img src="img/akar-icons_edit.svg" alt="no">
-                </button>
-              </li>
-              <li class="crm__main-1_3-img">
-                <button class="crm__main-img">
-                  <img src="img/ant-design_delete-outlined.svg" alt="no">
-                </button>
-              </li>
-            </ul>
-          </div>
-          -->
 
           <div style="min-width: 1100px; overflow-x: auto">
             <table style="border-collapse: collapse; margin: 0">
@@ -186,36 +73,6 @@
               </tr>
               </thead>
               <tbody>
-              <!--
-              <tr class="crm__table-row">
-                <td style="text-align: right; min-width: 93px">246016548</td>
-                <td style="min-width: 290px;">Навигационная система Soundmax</td>
-                <td style="min-width: 160px; text-align: left;">Техника для дома</td>
-                <td style="min-width: 52px; text-align: center;">шт</td>
-                <td style="min-width: 91px; text-align: center;">5</td>
-                <td style="min-width: 80px; text-align: right;">$100</td>
-                <td style="min-width: 80px; text-align: right;">$500</td>
-                <td>
-                  <ul class="crm__main_1-img">
-                  <li class="crm__main-1_1-img">
-                    <button class="crm__main-img">
-                      <img src="img/ant-design_delete-outlined.svg" alt="no">
-                    </button>
-                  </li>
-                  <li class="crm__main-1_2-img">
-                    <button class="crm__main-img">
-                      <img src="img/akar-icons_edit.svg" alt="no">
-                    </button>
-                  </li>
-                  <li class="crm__main-1_3-img">
-                    <button class="crm__main-img">
-                      <img src="img/ant-design_delete-outlined.svg" alt="no">
-                    </button>
-                  </li>
-                </ul>
-              </td>
-              </tr>
-              -->
               </tbody>
             </table>
           </div>
@@ -267,8 +124,7 @@
         </p>
       </div>
 
-      <p class="window__id">1253</p>
-      <button class="window__exit" type="button"><img src="img/X.svg" alt="X"></button>
+      <button class="window__exit window__exit-btn" type="button"><img src="img/X.svg" alt="X"></button>
 
       <form action="https://jsonplaceholder.typicode.com/posts" method="post">
         <h1 class="window__start-world">
