--- a/index.html
+++ b/index.html
@@ -169,17 +169,17 @@
 
           <label class="window__text window__text-description window__description" >
             ОПИСАНИЕ
-            <textarea class="window__boarder_description" name="description"></textarea>
+            <textarea class="window__boarder_description" name="description" required></textarea>
           </label>
 
           <label class="window__text window__number">
             КОЛИЧЕСТВО
-            <input class="window__boarder" type="number" name="count">
+            <input class="window__boarder" type="number" name="count" required>
           </label>
 
           <label class="window__text window__price" >
             ЦЕНА
-            <input class="window__boarder" type="number" name="price">
+            <input class="window__boarder" type="number" name="price" required>
           </label>
 
           <label class="window__add-photo window__photo">
