--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap" rel="stylesheet">
 
-  <script defer src="./js/cart.js"></script>
+  <script type="module" src="js/cart.js"></script>
 </head>
 <body>
 
